--- a/BeeBuzz/appsettings.json
+++ b/BeeBuzz/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BeeBuzz_Db;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security = true; Connect Timeout = 30;"
+  },
   "AllowedHosts": "*"
 }
